--- a/src/pages/tools/ruanDl.astro
+++ b/src/pages/tools/ruanDl.astro
@@ -5,8 +5,8 @@ const pageTitle = "软天空改版下载站 | Ruantools";
 const description = "经作者授权的改版应用集散地，提供软天空系列改版应用的下载和验证";
 
 // 导入Vue组件和应用数据
-import DownloadApp from '../../../components/DownloadApp.vue';
-import { apps } from '../../../data/apps.js';
+import DownloadApp from '../../components/DownloadApp.vue';
+import { apps } from '../../data/apps.js';
 ---
 
 <!DOCTYPE html>
